--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "leancloud-storage": "^4.12.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "sharp": "^0.29.3"
   }
 }
